--- a/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContainer.module.scss
@@ -7,7 +7,12 @@
   padding: 40px 0;
   @include devices(md) {
     min-height: auto;
-    margin-bottom: -175px + $FM_FOOTER_HEIGHT_MD;
+    margin-bottom: -233px + $FM_FOOTER_HEIGHT_MD;
+    padding: 0;
+  }
+  @include devices(xs) {
+    min-height: auto;
+    margin-bottom: -199px + $FM_FOOTER_HEIGHT_XS;
     padding: 0;
   }
 }
