--- a/rider/src/components/Account/Delivery/DeliveryContent.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.scss
@@ -1,30 +1,4 @@
-.delivery-history-container {
-  .button-container {
-    width: 359px;
-    height: 766px;
-    background: #f2f2f2;
-    border: 1px solid #000000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    padding: 40px;
-
-    a {
-      background: #dddcdc;
-      padding: 1em 2em;
-      border: 0.5px solid #61481c;
-      border-radius: 10px;
-      text-decoration: none;
-      color: black;
-      font-weight: 300;
-      font-size: 18px;
-      cursor: pointer;
-      width: 300px;
-      text-align: center;
-    }
-  }
-
+.delivery-container {
   .table-container-history {
     .table-header {
       padding: 20px;
@@ -43,7 +17,7 @@
         @media (width: 320px) {
           display: flex;
           align-items: center;
-          gap: 67px;
+          gap: 30px;
         }
 
         h3 {
@@ -68,7 +42,7 @@
               height: 20px;
             }
             @media (width: 320px) {
-              width: 110px;
+              width: 140px;
               height: 20px;
             }
           }
@@ -148,158 +122,281 @@
         }
       }
     }
-
-    table {
-      border-collapse: separate;
-      border-spacing: 0 15px;
-
-      //creates a horizontal scroll
-      display: block;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-    //Fixed first column
-    thead {
-      .test1 {
-        position: sticky;
-        position: -webkit-sticky;
-        width: 100px;
-        min-width: 100px;
-        max-width: 100px;
-        left: 0px;
-        background: #61481c;
-        border: 1px solid black;
-      }
-    }
-    //Fixed first column
-    tbody {
-      background: #fde9b1;
-      border: 1px solid #000000;
-
-      .test2 {
-        position: sticky;
-        position: -webkit-sticky;
-        width: 100px;
-        min-width: 100px;
-        max-width: 100px;
-        left: 0px;
-        background: #a47e3b;
-        border: 1px solid black;
-        color: white;
-        height: 43px;
-      }
-
-      .status-icon {
-        width: 30px;
-        height: 30px;
-        border: 0.5px solid black;
-        border-radius: 3px;
-      }
-
-      .mark-buttons {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 2px;
-        text-align: center;
-
-        button {
-          background: #000000;
-          border: 0.5px solid #61481c;
-          border-radius: 3px;
-
-          font-weight: 400;
-          font-size: 8px;
-          line-height: 17px;
-          color: #e6b325;
-          margin-top: 4px;
-        }
-      }
-    }
-
-    th,
-    td {
-      width: 150px;
-      text-align: center;
-      border-top: 1px solid black;
-      padding: 5px;
-    }
-
-    .page-number {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 40px;
-
-      .page-turn {
-        cursor: pointer;
-        text-decoration: none;
-        color: black;
-      }
-    }
   }
 }
 
-table {
-  border-collapse: separate;
-  border-spacing: 0 15px;
-}
-
-thead {
-  // background: #61481c;
-  // text-align: center;
-  // font-style: normal;
-  // font-weight: 300;
-  // font-size: 15px;
-  // line-height: 17px;
-  // color: white;
-}
-
-tbody {
-  background: #fde9b1;
-  border: 1px solid #000000;
-}
-
-th,
-td {
-  width: 150px;
-  text-align: center;
-  border-top: 1px solid black;
-  padding: 5px;
-}
-
-.delivery-buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 100px;
-
-  @media (max-width: 425px) {
-    gap: 12px;
-    margin-top: 340px;
+.order-delivery-container {
+  .order-id {
+    background: #a47e3b;
+    border: 0.5px solid #61481c;
+    border-radius: 2px;
+    width: 85px;
+    height: 22px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
   }
-
-  button {
+  .order-items {
     background: #d9d9d9;
-    padding: 0.5em 2em;
-    border: 0.5px solid rgba(97, 72, 28, 0.5);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 1px solid #525252;
     border-radius: 5px;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 15px;
-    cursor: pointer;
+    width: 85px;
+    height: 90px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: black;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
+
+    ul:before {
+      content: attr(aria-label);
+      font-size: 10px;
+      font-weight: bold;
+      margin-left: -29px;
+      text-align: center;
+    }
+
+    li {
+      list-style: none;
+      font-weight: 300;
+      font-size: 10px;
+      line-height: 10px;
+      margin-left: -29px;
+    }
+  }
+  .delivery-fee {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .grand-total {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .customer-info {
+    background: #fde9b1;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    width: 262px;
+    height: 185px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    @media (width: 320px) {
+      width: 189px;
+    }
+
+    li {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+      list-style: none;
+
+      span {
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 13px;
+      }
+      img {
+        margin-left: 2px;
+        width: 15%;
+      }
+    }
+    .decline-accept {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2px;
+      font-size: 8px;
+      margin-top: 5px;
+
+      a {
+        background: black;
+        padding: 0.1em 1em;
+        border: 0.5px solid #61481c;
+        border-radius: 3px;
+        color: #f0bb62;
+      }
+    }
   }
 }
+//
+.order-delivery-container-desktop {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  @media (max-width: 767px) {
+    display: none;
+  }
+
+  .order-id {
+    background: #a47e3b;
+    border: 0.5px solid #61481c;
+    border-radius: 2px;
+    width: 105px;
+    height: 42px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 38px;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+  }
+  .order-items {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 90px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: black;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+
+    ul:before {
+      content: attr(aria-label);
+      font-size: 10px;
+      font-weight: bold;
+      margin-left: -29px;
+      text-align: center;
+    }
+
+    li {
+      list-style: none;
+      font-weight: 300;
+      font-size: 10px;
+      line-height: 10px;
+      margin-left: -29px;
+    }
+  }
+  .delivery-fee {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .grand-total {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .customer-info {
+    background: #fde9b1;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    width: 562px;
+    height: 185px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    @media (width: 320px) {
+      width: 189px;
+    }
+
+    li {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+      list-style: none;
+
+      span {
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 13px;
+      }
+      img {
+        margin-left: 2px;
+        width: 8%;
+      }
+    }
+    .decline-accept {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2px;
+      font-size: 8px;
+      margin-top: 5px;
+
+      a {
+        background: black;
+        padding: 0.1em 1em;
+        border: 0.5px solid #61481c;
+        border-radius: 3px;
+        color: #f0bb62;
+      }
+    }
+  }
+}
+//
 
 .bottom-buttons {
   display: flex;
   justify-content: center;
   gap: 10px;
-  margin-top: 140px;
+  margin-top: 50px;
 
   @media (max-width: 425px) {
-    margin-top: 270px;
+    // margin-top: 270px;
   }
 
   button {
@@ -359,8 +456,4 @@ td {
       }
     }
   }
-}
-
-.test-table {
-  transform: scale(0.85);
 }
