--- a/rider/src/components/Account/ResetPassword/ResetPasswordContainer.module.scss
+++ b/rider/src/components/Account/ResetPassword/ResetPasswordContainer.module.scss
@@ -4,6 +4,26 @@
 .container {
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
+
+  @include devices(md) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    .navigationContainer {
+      background: none;
+      border: none;
+      height: none;
+      padding: 0px;
+    }
+  }
+
+  @include devices(xs) {
+    min-height: calc($FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
+    .navigationContainer {
+      background: none;
+      border: none;
+      height: none;
+      padding: 0px;
+    }
+  }
 }
 
 .navigationContainer,
@@ -12,10 +32,19 @@
   border: 1px solid #000000;
   height: 100%;
   padding: 30px 20px;
+
+  @media (max-width: 768px) {
+    background: none;
+    border: none;
+  }
 }
 
 .contentContainer {
   background-color: #fdf5e7;
+
+  @media (max-width: 768px) {
+    background: none;
+  }
 }
 
 .content {
