--- a/rider/src/components/Home/LoginForm.module.scss
+++ b/rider/src/components/Home/LoginForm.module.scss
@@ -43,6 +43,7 @@
     line-height: 1;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
 
     &:hover {
       opacity: 0.75;
