--- a/customer/src/components/Account/Profile/ProfileContainer.module.scss
+++ b/customer/src/components/Account/Profile/ProfileContainer.module.scss
@@ -4,21 +4,13 @@
 .container {
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
-}
 
-.navigationContainer,
-.contentContainer {
-  background: #f2f2f2;
-  border: 1px solid #000000;
-  height: 100%;
-  padding: 30px 20px;
-}
+  @include devices(md) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    padding-top: 20px;
+  }
 
-.contentContainer {
-  background-color: #fdf5e7;
-}
-
-.content {
-  height: 100%;
-  padding: 30px 20px;
+  @include devices(xs) {
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
+  }
 }
