--- a/rider/src/components/Account/Delivery/DeliveryContent.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.scss
@@ -215,7 +215,11 @@
     gap: 5px;
 
     @media (width: 320px) {
-      width: 189px;
+      width: 209px;
+    }
+
+    @media (min-width: 768px) {
+      width: 600px;
     }
 
     li {
@@ -232,6 +236,10 @@
       img {
         margin-left: 2px;
         width: 15%;
+
+        @media (min-width: 768px) {
+          width: 10%;
+        }
       }
     }
     .decline-accept {
@@ -350,7 +358,7 @@
     gap: 5px;
 
     @media (width: 320px) {
-      width: 189px;
+      width: 209px;
     }
 
     li {
@@ -358,6 +366,7 @@
       font-size: 10px;
       line-height: 13px;
       list-style: none;
+      margin-top: 5px;
 
       span {
         font-weight: 300;
@@ -367,6 +376,10 @@
       img {
         margin-left: 2px;
         width: 8%;
+
+        @media (min-width: 768px) {
+          width: 10%;
+        }
       }
     }
     .decline-accept {
