--- a/rider/src/components/Account/History/OrderHistoryContent.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.scss
@@ -169,23 +169,23 @@
       margin-left: -29px;
     }
   }
-  .delivery-fee {
-    background: #d9d9d9;
-    border: 1px solid #525252;
-    border-radius: 5px;
-    width: 85px;
-    height: 30px;
-    font-weight: 600;
-    font-size: 10px;
-    line-height: 13px;
-    text-align: center;
+  // .delivery-fee {
+  //   background: #d9d9d9;
+  //   border: 1px solid #525252;
+  //   border-radius: 5px;
+  //   width: 85px;
+  //   height: 30px;
+  //   font-weight: 600;
+  //   font-size: 10px;
+  //   line-height: 13px;
+  //   text-align: center;
 
-    span {
-      font-weight: 900;
-      font-size: 12px;
-      line-height: 16px;
-    }
-  }
+  //   span {
+  //     font-weight: 900;
+  //     font-size: 12px;
+  //     line-height: 16px;
+  //   }
+  // }
   .grand-total {
     background: #d9d9d9;
     border: 1px solid #525252;
@@ -204,19 +204,19 @@
     }
   }
   .customer-info {
-    background: #fde9b1;
-    border: 1px solid #61481c;
-    border-radius: 0px 5px 5px 5px;
-    width: 262px;
-    height: 185px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+    // background: #fde9b1;
+    // border: 1px solid #61481c;
+    // border-radius: 0px 5px 5px 5px;
+    // width: 262px;
+    // height: 185px;
+    // padding: 5px;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 5px;
 
-    @media (width: 320px) {
-      width: 189px;
-    }
+    // @media (width: 320px) {
+    //   width: 189px;
+    // }
 
     li {
       font-weight: 250;
@@ -229,10 +229,10 @@
         font-size: 10px;
         line-height: 13px;
       }
-      img {
-        margin-left: 2px;
-        width: 15%;
-      }
+      // img {
+      //   margin-left: 2px;
+      //   width: 15%;
+      // }
     }
     .decline-accept {
       display: flex;
@@ -304,23 +304,23 @@
       margin-left: -29px;
     }
   }
-  .delivery-fee {
-    background: #d9d9d9;
-    border: 1px solid #525252;
-    border-radius: 5px;
-    width: 85px;
-    height: 30px;
-    font-weight: 600;
-    font-size: 10px;
-    line-height: 13px;
-    text-align: center;
+  // .delivery-fee {
+  //   background: #d9d9d9;
+  //   border: 1px solid #525252;
+  //   border-radius: 5px;
+  //   width: 85px;
+  //   height: 30px;
+  //   font-weight: 600;
+  //   font-size: 10px;
+  //   line-height: 13px;
+  //   text-align: center;
 
-    span {
-      font-weight: 900;
-      font-size: 12px;
-      line-height: 16px;
-    }
-  }
+  //   span {
+  //     font-weight: 900;
+  //     font-size: 12px;
+  //     line-height: 16px;
+  //   }
+  // }
   .grand-total {
     background: #d9d9d9;
     border: 1px solid #525252;
@@ -339,19 +339,19 @@
     }
   }
   .customer-info {
-    background: #fde9b1;
-    border: 1px solid #61481c;
-    border-radius: 0px 5px 5px 5px;
-    width: 562px;
-    height: 185px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+    // background: #fde9b1;
+    // border: 1px solid #61481c;
+    // border-radius: 0px 5px 5px 5px;
+    // width: 562px;
+    // height: 185px;
+    // padding: 5px;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 5px;
 
-    @media (width: 320px) {
-      width: 189px;
-    }
+    // @media (width: 320px) {
+    //   width: 189px;
+    // }
 
     li {
       font-weight: 250;
@@ -364,10 +364,10 @@
         font-size: 10px;
         line-height: 13px;
       }
-      img {
-        margin-left: 2px;
-        width: 8%;
-      }
+      // img {
+      //   margin-left: 2px;
+      //   width: 8%;
+      // }
     }
     .decline-accept {
       display: flex;
