--- a/customer/src/components/Register/RegisterForm.module.scss
+++ b/customer/src/components/Register/RegisterForm.module.scss
@@ -66,7 +66,9 @@
     border-radius: 5px;
     color: #61481c;
     font-size: 20px;
-    padding: 10px 70px;
+    line-height: 1.2;
+    min-width: 240px;
+    padding: 10px;
 
     &:hover {
       background: #a47e3b;
@@ -74,7 +76,8 @@
     }
 
     @include devices(md) {
-      font-size: 16px;
+      font-size: 18px;
+      padding: 6px;
     }
   }
 
