--- a/rider/src/components/Registration/RegistrationForm.module.scss
+++ b/rider/src/components/Registration/RegistrationForm.module.scss
@@ -140,13 +140,14 @@
   color: black;
   padding: 0.5em 1.5em;
   top: 5px;
-  left: 170px;
+  left: 100px;
   font-size: 10px;
   cursor: pointer;
 
   @media (max-width: 375px) {
     font-size: 8px;
-    padding: 0.9em 1em;
+    padding: 0.9em 2em;
+    left: 120px;
   }
 }
 
@@ -171,10 +172,21 @@ button {
   color: #61481c;
   font-size: 20px;
   padding: 10px 100px;
-  width: 200px;
+  width: 250px;
 
   &:hover {
     background: #a47e3b;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.errors {
+  color: red;
+  text-align: left;
+
+  p {
+    font-size: 14px;
+    line-height: 1.2;
+    margin-bottom: 0;
   }
 }
