--- a/customer/src/components/Register/RegisterForm.module.scss
+++ b/customer/src/components/Register/RegisterForm.module.scss
@@ -75,6 +75,10 @@
       text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
+    &:disabled {
+      background: $FM_BG_GRAY2;
+    }
+
     @include devices(md) {
       font-size: 18px;
       padding: 6px;
