--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -56,7 +56,8 @@
 
   .right .buttons #editBtn {
     background: #d9d9d9;
-    padding: 1em 5em;
+    // padding: 1em 5em;
+    width: 100px;
     color: black;
 
     border: 0.5px solid rgba(97, 72, 28, 0.5);
@@ -65,13 +66,15 @@
     text-decoration: none;
 
     @media (max-width: 425px) {
-      padding: 0.5em 2em;
+      // padding: 0.5em 2em;
+      width: 80px;
     }
   }
 
   .right .buttons #saveBtn {
     background: #d9d9d9;
-    padding: 1em 5em;
+    // padding: 1em 5em;
+    width: 100px;
     color: black;
 
     border: 0.5px solid rgba(97, 72, 28, 0.5);
@@ -80,7 +83,8 @@
     text-decoration: none;
 
     @media (max-width: 425px) {
-      padding: 0.5em 2em;
+      // padding: 0.5em 2em;
+      width: 80px;
     }
   }
 
