--- a/rider/src/components/Account/Profile/ProfileContainer.module.scss
+++ b/rider/src/components/Account/Profile/ProfileContainer.module.scss
@@ -8,7 +8,7 @@
 
   @include devices(md) {
     min-height: auto;
-    margin-bottom: -280px + $FM_FOOTER_HEIGHT_MD;
+    margin-bottom: -255px + $FM_FOOTER_HEIGHT_MD;
   }
 }
 
@@ -20,12 +20,18 @@
   height: 766px;
 
   @media (max-width: 768px) {
-    height: 870px;
+    // height: 870px;
+    background: none;
+    border: none;
   }
 }
 
 .contentContainer {
   background-color: #fdf5e7;
+
+  @media (max-width: 768px) {
+    background: none;
+  }
 }
 
 .content {
