--- a/rider/src/components/Account/Profile/ProfileContent.scss
+++ b/rider/src/components/Account/Profile/ProfileContent.scss
@@ -4,6 +4,10 @@
   }
   .right h3 {
     padding: 15px;
+
+    @media (max-width: 768px) {
+      padding: 0;
+    }
   }
 
   .right form {
@@ -11,10 +15,18 @@
     top: 0px;
     padding: 20px;
 
+    @media (max-width: 768px) {
+      padding: 0px;
+    }
+
     label {
       font-weight: 300;
       font-size: 15px;
       line-height: 20px;
+
+      @media (max-width: 768px) {
+        font-size: 12px;
+      }
     }
 
     input {
@@ -107,8 +119,8 @@
         height: 70px;
       }
       @media (max-width: 425px) {
-        width: 60px;
-        height: 50px;
+        width: 74px;
+        height: 70px;
       }
     }
   }
