--- a/customer/src/components/Restaurant/Details.module.scss
+++ b/customer/src/components/Restaurant/Details.module.scss
@@ -17,9 +17,13 @@
     }
 
     img {
+      background-color: #ffffff;
       border: 1px solid #61481c;
       box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+      object-fit: contain;
+      width: 80px;
       height: 80px;
+      padding: 3px;
     }
 
     h3 {
