--- a/rider/src/components/Registration/RegistrationForm.module.scss
+++ b/rider/src/components/Registration/RegistrationForm.module.scss
@@ -52,14 +52,14 @@
   text-align: center;
 
   .test2 {
-    background: #d9d9d9;
-    border: 0.5px solid #b4b4b4;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 3px;
-    text-decoration: none;
-    color: black;
-    padding: 0 2em;
-    top: 5px;
+    // background: #d9d9d9;
+    // border: 0.5px solid #b4b4b4;
+    // box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+    // border-radius: 3px;
+    // text-decoration: none;
+    // color: black;
+    // padding: 0 2em;
+    // top: 5px;
   }
 
   h3 {
@@ -139,15 +139,15 @@
   text-decoration: none;
   color: black;
   padding: 0.5em 1.5em;
-  top: 5px;
-  left: 100px;
+  // top: 5px;
+  // left: 100px;
   font-size: 10px;
   cursor: pointer;
 
   @media (max-width: 375px) {
-    font-size: 8px;
-    padding: 0.9em 2em;
-    left: 120px;
+    // font-size: 8px;
+    // padding: 0.9em 2em;
+    // left: 120px;
   }
 }
 
