--- a/customer/src/components/Register/RegisterContainer.module.scss
+++ b/customer/src/components/Register/RegisterContainer.module.scss
@@ -1,6 +1,31 @@
 @import "../../theme/_variables.scss";
 @import "../../theme/_mixins.scss";
 
+.background {
+  background-image: url(../../assets/images/bg-register.png);
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  background-size: 450px;
+
+  @include devices(xl) {
+    background-size: 400px;
+  }
+
+  @include devices(lg) {
+    background-size: 350px;
+  }
+
+  @include devices(md) {
+    background-size: 325px;
+  }
+
+  @include devices(sm) {
+    background-position: right -30px bottom;
+    background-size: 300px;
+    padding-bottom: 130px;
+  }
+}
+
 .container {
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
