--- a/customer/src/components/Account/Profile/ProfileForm.module.scss
+++ b/customer/src/components/Account/Profile/ProfileForm.module.scss
@@ -2,22 +2,13 @@
 @import "../../../theme/_mixins.scss";
 
 .formInnerContainer {
-  background: rgba(198, 174, 133, 0.5);
-  border-radius: 5px;
-  margin-bottom: 20px;
-  padding: 20px 40px;
+  margin-bottom: 40px;
 
   @include devices(md) {
-    border-radius: 5px;
-    padding: 20px 20px 15px;
-
-    &:first-child {
-      margin-bottom: 20px;
-    }
+    margin-bottom: 20px;
   }
 
   @include devices(xs) {
-    padding: 15px 15px 10px;
   }
 }
 
@@ -28,10 +19,11 @@
     color: #61481c;
     font-size: 20px;
     line-height: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 
     @include devices(md) {
       font-size: 18px;
+      margin-bottom: 20px;
     }
   }
 
@@ -79,10 +71,13 @@
 
     &:disabled {
       background: $FM_BG_GRAY2;
+      opacity: 1;
     }
 
     @include devices(md) {
-      font-size: 16px;
+      font-size: 14px;
+      padding: 6px;
+      width: 130px;
     }
   }
 }
