--- a/customer/src/components/Otp/OtpForm.module.scss
+++ b/customer/src/components/Otp/OtpForm.module.scss
@@ -61,6 +61,11 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: #ffffff;
   }
+
+  &:disabled {
+    background: $FM_BG_GRAY2;
+    opacity: 1;
+  }
 }
 
 .lottie {
