--- a/customer/src/components/Account/Orders/OrdersContent.module.scss
+++ b/customer/src/components/Account/Orders/OrdersContent.module.scss
@@ -47,15 +47,18 @@
   .btnView {
     text-align: center;
 
-    button {
+    a {
       background-color: $FM_BG_YELLOW;
       border: 0.5px solid $FM_TEXT_BROWN;
+      border-radius: 3px;
       color: #ffffff;
+      display: inline-block;
       font-size: 10px;
       font-weight: 500;
       height: 30px;
-      line-height: 1;
+      line-height: 30px;
       padding: 0;
+      text-decoration: none;
       text-shadow: $FM_TEXT_SHADOW;
       text-transform: uppercase;
       width: 100px;
@@ -139,10 +142,11 @@
     .btnView {
       display: block;
 
-      button {
+      a {
         border-radius: 3px;
         font-size: 11px;
-        height: 100%;
+        height: 34px;
+        line-height: 34px;
         width: 110px;
       }
     }
