--- a/rider/src/components/Account/Delivery/DeliveryContent.module.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.module.scss
@@ -651,43 +651,12 @@
 
 .rewardsContainer {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 100%;
-  .rewardsBtn {
-    color: white;
-    margin-top: 30px;
-    position: relative;
-    a {
-      background: #e6b325;
-      border: 1px solid #61481c;
-      border-radius: 5px;
-      padding: 1em 7em;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 24px;
-      margin-top: 40px;
-      cursor: pointer;
+  margin-top: 80px;
 
-      @media (max-width: 425px) {
-        font-size: 12px;
-        padding: 0.5em 4em;
-      }
-    }
-    img {
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      top: -1px;
-      right: 90px;
-
-      @media (max-width: 425px) {
-        top: 5px;
-        right: 25px;
-        width: 20px;
-        height: 20px;
-      }
-    }
+  img {
+    cursor: pointer;
   }
 }
 
