--- a/rider/src/components/Account/Rewards/RewardsContent.module.scss
+++ b/rider/src/components/Account/Rewards/RewardsContent.module.scss
@@ -1,3 +1,6 @@
+@import "../../../theme/variables";
+@import "../../../theme/mixins";
+
 .container {
   p {
     font-weight: 400;
@@ -26,5 +29,98 @@
   }
   .closeBtn {
     width: 2px;
+  }
+}
+
+.sliderContainer {
+  padding: 0 15px 10px;
+  margin-bottom: 160px;
+}
+
+.slideItem {
+  border: 1px solid #969696;
+  border-radius: 5px;
+  box-shadow: $FM_BUTTON_SHADOW;
+  cursor: pointer;
+  height: 130px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+
+  &:hover {
+    .imageContainer {
+      img {
+        opacity: 1;
+      }
+    }
+
+    .title {
+      h4 {
+        color: #ffffff;
+      }
+    }
+  }
+}
+
+.imageContainer {
+  height: 130px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+
+  img {
+    object-fit: cover;
+    height: 140px;
+    width: 100%;
+    opacity: 0.6;
+    transition: $FM_TRANSITION;
+  }
+}
+
+.title {
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 55px;
+  padding: 0 10px;
+  z-index: 9999;
+
+  h4 {
+    color: $FM_BG_YELLOW;
+    line-height: 1;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    transition: $FM_TRANSITION;
+    user-select: none;
+    font-size: 15px;
+  }
+}
+
+@include devices(md) {
+  .sliderContainer {
+    margin: 0 5px 10px;
+    padding: 0 0 10px;
+  }
+}
+
+@include devices(sm) {
+  .slideItem {
+    height: 90px;
+  }
+
+  .imageContainer {
+    height: 90px;
+
+    img {
+      height: 100px;
+    }
+  }
+
+  .title {
+    height: 45px;
+    padding: 0 5px;
+
+    h4 {
+      font-size: 12px;
+    }
   }
 }
