--- a/customer/src/components/Account/Profile/ProfileForm.module.scss
+++ b/customer/src/components/Account/Profile/ProfileForm.module.scss
@@ -51,7 +51,7 @@
     }
   }
 
-  button {
+  button:not(.btnChangePass) {
     background: $FM_TEXT_BROWN;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border: none;
@@ -66,7 +66,6 @@
 
     &:hover {
       background: #a47e3b;
-      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
     &:disabled {
@@ -78,6 +77,29 @@
       font-size: 14px;
       padding: 6px;
       width: 130px;
+    }
+  }
+
+  button.btnChangePass {
+    background-color: $FM_BG_GRAY;
+    border: 0.5px solid #000000;
+    border-radius: 5px;
+    color: #000000;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1;
+    text-transform: uppercase;
+    padding: 10px 20px;
+
+    &:hover {
+      border-color: rgba(97, 72, 28, 0.5);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    @include devices(md) {
+      font-weight: 400;
+      margin: 10px 0;
+      padding: 8px 16px;
     }
   }
 }
