--- a/rider/src/components/Account/Rewards/RewardsContent.module.scss
+++ b/rider/src/components/Account/Rewards/RewardsContent.module.scss
@@ -25,16 +25,21 @@
 
     @media (max-width: 425px) {
       font-size: 8px;
+      width: 70px;
     }
   }
   .closeBtn {
     width: 2px;
+
+    @media (max-width: 425px) {
+      width: 1px;
+    }
   }
 }
 
 .sliderContainer {
   padding: 0 15px 10px;
-  margin-bottom: 160px;
+  margin-bottom: 0px;
 }
 
 .slideItem {
@@ -121,6 +126,74 @@
 
     h4 {
       font-size: 12px;
+    }
+  }
+}
+
+.dateContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
+  background: #fde9b1;
+  width: 822px;
+  height: 44px;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 27px;
+  border: 0.5px solid #61481c;
+
+  @media (max-width: 425px) {
+    width: 440px;
+    height: 20px;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 13px;
+  }
+}
+
+.progressBarRow {
+  h6 {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+  }
+  p {
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 13px;
+  }
+  .progressBar {
+    height: 38px;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+
+    .progressBar1 {
+      color: black;
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 20px;
+    }
+
+    .progressBar2 {
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 20px;
+    }
+  }
+  .riderImg {
+    margin-top: 28px;
+
+    img {
+      width: 328px;
+      height: 241px;
+
+      @media (max-width: 425px) {
+        width: 350px;
+        height: 221px;
+      }
     }
   }
 }
