--- a/customer/src/components/Restaurant/MenuSlider.module.scss
+++ b/customer/src/components/Restaurant/MenuSlider.module.scss
@@ -77,7 +77,7 @@
       width: 47%;
     }
 
-    .qty {
+    .quantity {
       background: #dedede;
       border: 0.5px solid #6b6b6a;
       box-shadow: $FM_SHADOW;
