--- a/rider/src/components/Account/Delivery/DeliveryContent.scss
+++ b/rider/src/components/Account/Delivery/DeliveryContent.scss
@@ -343,6 +343,81 @@
     }
   }
 }
+//Accordion Start
+.accordion-header {
+  border: none;
+}
+
+.accordion {
+  border: none;
+  margin-top: 20px;
+
+  .orderIdBtn {
+    background: #a47e3b;
+  }
+  .deliveryDetails2 {
+    // background: white;
+    // border: 1px solid #61481c;
+    // border-radius: 0px 5px 5px 5px;
+    // margin-left: 12px;
+    margin-top: 5px;
+    // width: 378px;
+    // height: 550px;
+
+    p {
+      font-weight: 250;
+      font-size: 12px;
+      line-height: 16px;
+    }
+    span {
+      font-weight: 600;
+      font-size: 12px;
+      line-height: 16px;
+    }
+    button {
+      width: 0.25px;
+    }
+    li {
+      margin-left: 10px;
+      list-style: none;
+      font-weight: 600;
+      font-size: 10px;
+      line-height: 13px;
+    }
+    .resto {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 70px;
+      }
+    }
+    .status {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 50px;
+      }
+    }
+    .declineAccept {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+
+      button {
+        background: #000000;
+        width: 100px;
+        border-radius: 5px;
+        color: #e6b325;
+      }
+    }
+  }
+}
+//Accordion End
 //
 //
 .orderDeliveryContainer {
